force-app/main/default/objects/Sales_Target_BDM__c/Sales_Target_BDM__c.object-meta.xml
<CustomObject>
    <label>Sales Target BDM</label>
    <nameField>
        <displayFormat>ST-BDM-{0000}</displayFormat>
        <label>Sales Target BDD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Target BDM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>