force-app/main/default/objects/Sales_Target_BDM__c/fields/Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Gibson_Role__c</field>
            <operation>equals</operation>
            <value>Business Development Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Managers</relationshipLabel>
    <relationshipName>Sales_Target_BDM</relationshipName>
    <type>Lookup</type>
</CustomField>