force-app/main/default/objects/Sales_Target_BDM__c/fields/Last_Year_Actual__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Actual__c</fullName>
    <label>Last Year Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>