force-app/main/default/objects/Sales_Target_BDM__c/fields/Sales_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Business Unit</label>
    <referenceTo>Sales_Business_Unit__c</referenceTo>
    <relationshipLabel>Sales Target BDM</relationshipLabel>
    <relationshipName>Sales_Business_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>