force-app/main/default/objects/Sales_Target_BDM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Business_Unit__c</columns>
    <columns>Business_Manager__c</columns>
    <columns>Current_FY__c</columns>
    <columns>Month__c</columns>
    <columns>Last_Year_Actual__c</columns>
    <columns>Target__c</columns>
    <columns>Actual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>